@@ -1415,11 +1415,11 @@ IpodHandler::deleteFile( const KUrl &url )
 
     m_jobcounter++;
 
-    if( m_jobcounter < IPOD_MAX_CONCURRENT_JOBS )
-        removeNextTrackFromDevice();
-
     connect( job, SIGNAL( result( KJob * ) ),
              this,  SLOT( fileDeleted( KJob * ) ) );
+    
+    if( m_jobcounter < IPOD_MAX_CONCURRENT_JOBS )
+        removeNextTrackFromDevice();
 
     return;
 }
@@ -1428,8 +1428,11 @@ void
 IpodHandler::fileDeleted( KJob *job )  //SLOT
 {
     DEBUG_BLOCK
-    if( job->error() )
-        debug() << "file deletion failed: " << job->errorText();
+    // HACK
+    // Filtrate #111 error (File or directory doesn't exist)
+    // Since It always present, we can ignore this "error"
+    if( job->error() && job->error() != 111 )
+        debug() << "file deletion failed: " << job->errorString();
 
     m_jobcounter--;
 
